Removed 'new Character()'